wordpress/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: kube-example
  labels:
    app: wordpress
    tier: mysql
spec:
  ports:
    - port: 3306
      targetPort: dbport
  selector:
    app: wordpress
    tier: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: kube-example
  labels:
    app: wordpress
    tier: mysql
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: 
          - ReadWriteOnce
        storageClassName: nfs-client
        resources:
          requests:
            storage: 10Gi
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
    spec:
      containers:
        - name: mysql
          image: 'mysql:5.7'
          imagePullPolicy: IfNotPresent
          args:
            - '--default_authentication_plugin=mysql_native_password'
            - '--character-set-server=utf8mb4'
            - '--collation-server=utf8mb4_unicode_ci'
          ports:
            - containerPort: 3306
              name: dbport
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
